# StringCompare

./: CMakeLists.txt  README.md  代码说明.md
include/: StringCompare.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CharSubString.cpp  CharSubString.h  ComparableSubString.h  DigitSubString.cpp  DigitSubString.h  StringCompare.cpp  StringComparer.cpp  StringComparer.h  StringSplitter.cpp  StringSplitter.h
src/Comparer/: CompareRule.cpp  CompareRule.h  StringComparer.cpp  StringComparer.h
src/Rule/: CompareRule.cpp  CompareRule.h
src/Splitter/: StringSplitter.cpp  StringSplitter.h
src/SubString/: CharSubString.cpp  CharSubString.h  ComparableSubString.h  DigitSubString.cpp  DigitSubString.h
test/: CMakeLists.txt
test/case/: test.cpp  test_StringCompare.cpp
